refactor: enhance `DataInitializer` with `Slf4j` logging, robust role creation including `ROLE_RECEPCIONISTA`, and improved admin user initialization.